# playground-20260216-polyglot-kernels

./: .gitignore  Dockerfile  Project.toml  index.md  myst.yml  pyproject.toml  requirements.txt
notebooks/: julia-notebook.ipynb  python-notebook.ipynb
